fixed x overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@ $black: #211d1c;
 html, body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 html{
@@ -13,6 +14,7 @@ html{
 body{
     font-family: "Work Sans",Arial,sans-serif;
     color: $black;
+    position: relative;
 }
 
 *{
